--- a/css/screen.css
+++ b/css/screen.css
@@ -1,21 +1,34 @@
 html{
-   
+   line-height: 2em;
+   font-family:sans-serif;
+   font-size: 1.2em;
 }
 header{
     
 }
 body{
-   
+   background-color: lightgrey;
 }
 h1{
-   
+   font-size: 2em;
+   text-align: center;
+}
+h3{
+    font-size: 1.25em;
+    text-align: center;
 }
 input, label{
-  
+    margin: auto; 
+    display: block;
+    width: 80%;
 }
 input{
-   
+    padding: .5em;
 }
+#subbutton{
+    margin-top: 1em;
+    width: 65%;
+ }
 
 @media only screen and (min-width : 480px) {
     html{
