--- a/css/screen.css
+++ b/css/screen.css
@@ -14,7 +14,7 @@ h1{
    text-align: center;
 }
 h3{
-    font-size: 1.25em;
+    font-size: 1.15em;
     text-align: center;
 }
 input, label{
@@ -29,6 +29,10 @@ input{
     margin-top: 1em;
     width: 65%;
  }
+ #wrapper{
+    display: block;
+    margin: auto;
+}
 
 @media only screen and (min-width : 480px) {
     html{
@@ -42,6 +46,12 @@ input{
     }
     input, label{
       
+    }
+    #subbutton{
+          
+    }
+    #wrapper{
+        
     }
     
 }
