--- a/css/screen.css
+++ b/css/screen.css
@@ -35,7 +35,7 @@ input[type='checkbox'] {
     float: left;
     width: 20px;
     margin-left: 8%;
-    margin-top: 1em;
+    margin-top: .9em;
   }
 #check{
     padding-top: .66em;
@@ -52,22 +52,36 @@ input[type='checkbox'] {
 
 @media only screen and (min-width : 480px) {
     html{
-        
+        font-size: 1.1em;
+        margin: 1em;
+    }
+    h3{
+        margin-top: 1em;
     }
     input{
-        
+        padding: 0.5em;
+        width: 75%;
     }
     label{
-        
+        width: 7em;
+        text-align: left;
     }
     input, label{
-      
+        display: block;
+    }
+    #check{
+        padding-top: 1em;
+    }
+    #checklabel{
+        width: 25em;
     }
     #subbutton{
-          
+        padding: 0.5em;
+        width: 15em;
+        display: block;   
     }
     #wrapper{
-        
+        width: 25em;
     }
     
 }
