--- a/css/screen.css
+++ b/css/screen.css
@@ -2,6 +2,7 @@ html{
    line-height: 2em;
    font-family:sans-serif;
    font-size: 1.2em;
+   font-family: 'Ubuntu', sans-serif;
 }
 header{
     padding: .6em;
@@ -13,6 +14,11 @@ body{
 h1{
    font-size: 2em;
    text-align: center;
+}
+h2{
+    text-align: center;
+    font-size: 2em;
+    padding: 4em;
 }
 h3{
     font-size: 1.15em;
