--- a/css/screen.css
+++ b/css/screen.css
@@ -55,7 +55,13 @@ input[type='checkbox'] {
     margin: auto;
     padding-top: 1em;
 }
-
+footer {
+    text-align: center; 
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
+  
 @media only screen and (min-width : 480px) {
     html{
         font-size: 1.1em;
