--- a/css/screen.css
+++ b/css/screen.css
@@ -57,7 +57,8 @@ input[type='checkbox'] {
 }
 footer {
     text-align: center; 
-    position: absolute;
+    position: fixed;
+    left: 0;
     bottom: 0;
     width: 100%;
   }
