--- a/css/screen.css
+++ b/css/screen.css
@@ -1,8 +1,7 @@
 html{
    line-height: 2em;
-   font-family:sans-serif;
    font-size: 1.2em;
-   font-family: 'Ubuntu', sans-serif;
+   font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
 }
 header{
     padding: .6em;
